fixed on small vireport view bg header

--- a/src/css/media.scss
+++ b/src/css/media.scss
@@ -18,7 +18,7 @@
   @media screen and (max-device-width: 992px) {
     .headerGrid {
       padding: 2vh 5vw;
-      height: 70vh;
+      height: 600px;
       grid-template-rows: repeat(2, 1fr);
       .navBar {
       display: flex;
