--- a/src/css/style.css
+++ b/src/css/style.css
@@ -167,7 +167,7 @@ body {
 @media screen and (max-device-width: 992px) {
   .headerGrid {
     padding: 2vh 5vw;
-    height: 70vh;
+    height: 600px;
     grid-template-rows: repeat(2, 1fr); }
     .headerGrid .navBar {
       display: flex;
